# autobench

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
autobench/: __init__.py  ai_integration.py  config.py  ghdl_runner.py  main.py  templates.py  testbench_generator.py  vhdl_parser.py
src/: main.rs
template/: template_tb.vhdl
tests/: __init__.py  test_absolute_timing.py  test_ai_extraction_robustness.py  test_ai_integration.py  test_assertion_messages.py  test_automatic_quoting.py  test_generic_handling.py  test_ghdl_runner.py  test_hex_conversion.py  test_optimized_vectors.py  test_optional_inputs.py  test_testbench_generator.py  test_vhdl_literals.py  test_vhdl_parser.py  test_vhdl_testbench_output.py
