[project]
name = "autobench"
version = "0.1.0"
description = "A Python CLI tool for automatically generating VHDL testbenches from entity files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "tomli-w>=1.0.0",
    "google-cloud-aiplatform>=1.38.0"
]

[project.scripts]
autobench = "autobench.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
